observability-hub/otel-collector/otel-collector-grpc-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: otel-collector-grpc
  namespace: observability
spec:
  host: otc-grpc.apps.open-svc-sts.k1wl.p1.openshiftapps.com
  port:
    targetPort: otlp-grpc
  tls:
    termination: passthrough
  to:
    kind: Service
    name: ingest-collector-headless
    weight: 100
  wildcardPolicy: None
