observability-hub/otel-collector/otel-collector-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: otc
  namespace: observability
spec:
  host: otc.${APPS_DOMAIN}
  #host: otc.apps.open-svc-sts.k1wl.p1.openshiftapps.com
  port:
    targetPort: otlp-http
  tls:
    termination: passthrough
  to:
    kind: Service
    name: ingest-collector-headless
    weight: 100
  wildcardPolicy: None
